--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bus_eka
+name: bus_eka_test
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.13.1
   firebase_auth: ^4.14.0
-  firebase_core: ^2.24.2
+  firebase_core: ^2.22.0
   firebase_storage: ^11.5.1
   image_picker: ^1.0.4
   uuid: ^4.2.1
@@ -46,6 +46,16 @@ dependencies:
   geolocator: ^10.1.0
   http: ^1.1.0
   firebase_database: ^10.3.5
+  flutter_datetime_picker: ^1.5.1
+  pdf: ^3.10.7
+  permission_handler: ^11.1.0
+  path_provider: ^2.1.1
+  url_launcher: ^6.2.2
+  file_picker: ^6.1.1
+  flutter_pdfview: ^1.3.2
+  flutter_local_notifications: ^16.3.0
+  shared_preferences: ^2.2.2
+
 
 dev_dependencies:
   flutter_test:
